--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^4.9.5"
   },
